--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "electron-es6-react",
   "version": "0.1.0",
-  "main": "main.js",
+  "main": "scripts/start.js",
   "license": "MIT",
   "repository": "b52/electron-es6-react",
   "scripts": {
-    "start": "electron -r babel-register ."
+    "start": "electron -r babel-register .",
+    "package": "electron-packager . --icon=assets/icon.icns --overwrite --out=packed --prune=true",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.3.13",
+    "electron-packager": "^11.0.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
