Fixed paths for start scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-es6-react",
   "version": "0.1.0",
-  "main": "scripts/start.js",
+  "main": "start.js",
   "license": "MIT",
   "repository": "b52/electron-es6-react",
   "scripts": {
