--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "license": "MIT",
   "repository": "b52/electron-es6-react",
   "scripts": {
-    "start": "electron -r babel-register ."
+    "start": "electron -r @babel/register ."
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "@babel/register": "^7.0.0-beta.42",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
-    "electron": "^1.4.3"
+    "electron": "^1.8.4"
   }
 }
